Changed: Updated links to be functional

--- a/index.html
+++ b/index.html
@@ -36,13 +36,10 @@
       <img class="rounded logo" src="https://scontent.fyzd1-1.fna.fbcdn.net/v/t1.0-9/12032203_10155971613590063_6845474097114590785_n.jpg?oh=0c322c1e15222d65e1fa8b019862dca3&oe=598CC3A9" />
       <ul>
         <li class="heavy text">
-          Me
+          <a href="#first">Top</a>
         </li>
         <li class="heavy text">
-          Stuff I've done
-        </li>
-        <li class="heavy text">
-          Let's chat
+          <a href="#second">A Message</a>
         </li>
       </ul>
     </div>
