Changed: New font, and updated content write up

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </title>
 
   <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Vidaloka" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lusitana" rel="stylesheet">
 
   <!-- standard styles -->
   <link rel="stylesheet" href="styles/base.css" />
@@ -48,11 +48,11 @@
     <div class="fixed centered">
       <div id="cover"></div>
       <div id="intro">
-        <h1 class="feature print">
-          Harro.
+        <h1 class="heavy feature print">
+          Harro. I'm Kenneth Ma.
         </h1>
         <h1 class="medium title">
-          My name is Kenneth Ma. I design all sorts of useless things as a mediocre full-stack software engineer.
+          I develop all sorts of useless things as a mediocre full-stack software engineer and pretend entrepreneur.
         </h1>
         <h1 class="medium title">
           Nice to meet you.
