Added: Colors to links and formatting

--- a/index.html
+++ b/index.html
@@ -48,13 +48,16 @@
     <div class="fixed centered">
       <div id="cover"></div>
       <div id="intro">
-        <h1 class="heavy feature print">
-          Harro. I'm Kenneth Ma.
+        <h1 class="feature print">
+          Harro.
         </h1>
-        <h1 class="medium title">
+        <h1 class="subtitle medium print">
+          I'm Kenneth Ma.
+        </h1>
+        <h1 class="medium title print">
           I develop all sorts of useless things as a mediocre full-stack software engineer and pretend entrepreneur.
         </h1>
-        <h1 class="medium title">
+        <h1 class="medium title print">
           Nice to meet you.
         </h1>
         <div class="divider"></div>
