Updated: Colors and sizes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </title>
 
   <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Lusitana" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lusitana+Montserrat" rel="stylesheet">
 
   <!-- standard styles -->
   <link rel="stylesheet" href="styles/base.css" />
@@ -35,10 +35,10 @@
     <div class="centered middle spaced fixed flex">
       <img class="rounded logo" src="https://scontent.fyzd1-1.fna.fbcdn.net/v/t1.0-9/12032203_10155971613590063_6845474097114590785_n.jpg?oh=0c322c1e15222d65e1fa8b019862dca3&oe=598CC3A9" />
       <ul>
-        <li class="heavy text">
+        <li class="heavy uppercased accented subtitle">
           <a href="#first">Top</a>
         </li>
-        <li class="heavy text">
+        <li class="heavy uppercased accented subtitle">
           <a href="#second">A Message</a>
         </li>
       </ul>
@@ -48,11 +48,11 @@
     <div class="fixed centered">
       <div id="cover"></div>
       <div id="intro">
-        <h1 class="feature print">
-          Harro.
+        <h1 class="heavy accented subtitle uppercased">
+          o hai, my name is
         </h1>
-        <h1 class="subtitle medium print">
-          I'm Kenneth Ma.
+        <h1 class="medium feature">
+          Kenneth Ma
         </h1>
         <h1 class="medium title print">
           I develop all sorts of useless things as a mediocre full-stack software engineer and pretend entrepreneur.
