Updated: Sizes and margins of title (name)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1 class="heavy accented subtitle uppercased">
           o hai, my name is
         </h1>
-        <h1 class="medium feature">
+        <h1 class="feature">
           Kenneth Ma
         </h1>
         <h1 class="medium title print">
