Removed: Header bar, not needed yet

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
       <div class="equal article">
         <div class="divider"></div>
-        <div class="heavy print feature">But I'm still working on my site</div>
+        <div class="heavy print feature">But my site isn't done</div>
         <p class="light text">
           I'm currently juggling between completing my Computer Science degree at the <a href="http://utoronto.ca">University of Toronto</a> in two more semesters, building <a href="http://palettera.ca">Palettera</a>'s new website &mdash; the <a href="http://ferriswheelpress.com">Ferris Wheel Press</a>, growing and managing my own <a href="http://frrand.com">startup</a>, helping coordinate courses as a head <a href="http://utsc.utoronto.ca/~bharrington/csca48">Teaching Assistant</a> at my school, keeping up with <a href="http://amc.com/shows/the-walking-dead">The Walking Dead</a> and <a href="http://hbo.com/silicon-valley">Silicon Valley</a>, maintaining a custom-made Point-of-Sale system for a <a href="http://laptoppro.ca">computer repair chain</a>, and of course: finishing this website.
         </p>
