First page revamp completed.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <header class="dark">
     <div class="centered middle spaced fixed flex">
-      <img class="rounded logo" src="https://scontent.fyzd1-1.fna.fbcdn.net/v/t1.0-9/12032203_10155971613590063_6845474097114590785_n.jpg?oh=0c322c1e15222d65e1fa8b019862dca3&oe=598CC3A9" />
+      <img class="rounded logo" src="assets/index/hero.jpg" />
       <ul>
         <li class="heavy uppercased accented subtitle">
           <a href="#first">Top</a>
