--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/text.css" />
   <link rel="stylesheet" href="styles/animations.css" />
+  <link rel="stylesheet" href="styles/chat.css" />
 
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -44,7 +45,7 @@
           <p class="top mimimal heavy accented uppercased subtitle">
             Hi. My name is
           </p>
-          <h4 class="heavy feature">Kenneth Ma</h4>
+          <h4 class="heavy feature">Kenneth Ma ✌️</h4>
           <p class="bottom medium print">I develop all sorts of useless things as a mediocre "full-stack" software engineer and pretend entrepreneur.</p>
           <div class="divider"></div>
         </div>
@@ -59,6 +60,28 @@
           </svg>
         </div>
       </div>
+    </div>
+  </section>
+  <section class="bubbles second page">
+    <div class="me label">
+      <p>Kenneth</p>
+    </div>
+    <div class="clear"></div>
+    <div class="from end">
+      <p>who dis?</p>
+    </div>
+    <div class="clear"></div>
+    <div class="you label">
+      <p>You</p>
+    </div>
+    <div class="clear"></div>
+    <div class="to end">
+      <p>Hi! I'm interested in hiring you, of course.</p>
+      <p>Tell me all about the "useless things" that you've made!</p>
+    </div>
+    <div class="clear"></div>
+    <div class="from end">
+      <p>um, ok</p>
     </div>
   </section>
 </body>
