Added Frrand page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,24 @@
     <div class="from end">
       <p>um, ok</p>
     </div>
+    <div class="clear"></div>
+  </section>
+  <section class="third dark page">
+    <div class="container">
+      <div class="row">
+        <div class="four columns">
+          <img src="/assets/index/frrand.jpg" class="u-max-full-width">
+        </div>
+        <div class="eight columns">
+          <p class="top mimimal heavy uppercased subtitle">I ran my own tech startup</h1>
+          <h4 class="heavy feature">Frrand, Inc.</h4>
+          <p class="medium print">Free delivery for the little things.</p>
+          <p class="medium print">Frrand was a crowd-sourced delivery platform that algorithmicly matched delivery requests to people already travelling a similar path.</p>
+          <p class="bottom medium print">On launch, Frrand went viral with over 2,000 users and 600 likes on our Facebook page.</p>
+          <div class="divider"></div>
+        </div>
+      </div>
+    </div>
   </section>
 </body>
 </html>
