Added commentary for Frrand

--- a/index.html
+++ b/index.html
@@ -95,12 +95,45 @@
           <p class="top mimimal heavy uppercased subtitle">I ran my own tech startup</h1>
           <h4 class="heavy feature">Frrand, Inc.</h4>
           <p class="medium print">Free delivery for the little things.</p>
-          <p class="medium print">Frrand was a crowd-sourced delivery platform that algorithmicly matched delivery requests to people already travelling a similar path.</p>
+          <p class="medium print">Frrand was a crowd-sourced delivery platform that algorithmically matched delivery requests to people already travelling a similar path.</p>
           <p class="bottom medium print">On launch, Frrand went viral with over 2,000 users and 600 likes on our Facebook page.</p>
           <div class="divider"></div>
         </div>
       </div>
     </div>
+  </section>
+  <section class="bubbles fourth page">
+    <div class="you label">
+      <p>You</p>
+    </div>
+    <div class="clear"></div>
+    <div class="to end">
+      <p>Dope!</p>
+      <p>I'm guessing you want to talk about how you got 2,000 users on the first day?</p>
+    </div>
+    <div class="clear"></div>
+    <div class="me label">
+      <p>Kenneth</p>
+    </div>
+    <div class="clear"></div>
+    <div id="pizza" class="from">
+      <div class="image"></div>
+    </div>
+    <div class="clear"></div>
+    <div class="from">
+      <p>it's like you read my mind</p>
+    </div>
+    <div class="clear"></div>
+    <div class="from end">
+      <p>we offered to buy our entire school pizza. seriously.</p>
+      <p>it ended up costing us only about $700.. or $0.35 each user gained</p>
+    </div>
+    <div class="clear"></div>
+    <div class="to end">
+      <p>Pretty lit 🔥</p>
+      <p>What else have you done?</p>
+    </div>
+    <div class="clear"></div>
   </section>
 </body>
 </html>
