Temporary placeholders at the end

--- a/index.html
+++ b/index.html
@@ -134,6 +134,31 @@
       <p>What else have you done?</p>
     </div>
     <div class="clear"></div>
+    <div class="from">
+      <p>lots more, but i'm not done my site yet. for now, chat with me irl</p>
+    </div>
+    <div class="clear"></div>
+    <div class="from">
+      <p>email <a href="mailto:ken@kenma.ca">ken@kenma.ca</a></p>
+    </div>
+    <div class="clear"></div>
+    <div class="from end">
+      <p>or on <a href="http://facebook.com/mmmken">facebook</a></p>
+    </div>
+    <div class="clear"></div>
+    <div class="to end">
+      <p>What if I don't want to chat just yet?</p>
+    </div>
+    <div class="clear"></div>
+    <div class="from end">
+      <p>sorry 😢</p>
+      <p>but here's my (less exciting) <a href="/ken.pdf">resume</a> until then</p>
+    </div>
+    <div class="clear"></div>
+    <div class="to end">
+      <p>👋</p>
+    </div>
+    <div class="clear"></div>
   </section>
 </body>
 </html>
