Moved: Resume to assets

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <div class="clear"></div>
     <div class="from end">
       <p>sorry 😢</p>
-      <p>but here's my (less exciting) <a href="/ken.pdf">resume</a> until then</p>
+      <p>but here's my (less exciting) <a href="/assets/index/ken.pdf">resume</a> until then</p>
     </div>
     <div class="clear"></div>
     <div class="to end">
