Updated content and resume

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <link href="//fonts.googleapis.com/css?family=Lusitana+Montserrat" rel="stylesheet" type="text/css">
 
   <!-- skeleton -->
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/skeleton.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/skeleton.css">
 
   <!-- styles -->
-  <link rel="stylesheet" href="styles/base.css">
-  <link rel="stylesheet" href="styles/text.css" />
-  <link rel="stylesheet" href="styles/animations.css" />
-  <link rel="stylesheet" href="styles/chat.css" />
+  <link rel="stylesheet" href="./styles/base.css">
+  <link rel="stylesheet" href="./styles/text.css" />
+  <link rel="stylesheet" href="./styles/animations.css" />
+  <link rel="stylesheet" href="./styles/chat.css" />
 
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -34,7 +34,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.js"></script>
 
   <!-- Base -->
-  <script src="js/index.js"></script>
+  <script src="./js/index.js"></script>
 </head>
 <body>
   <section class="first dark page">
@@ -43,10 +43,10 @@
         <div id="hero"></div>
         <div id="intro" class="five columns offset-by-one">
           <p class="top mimimal heavy accented uppercased subtitle">
-            Hi. My name is
+            Heya! I'm
           </p>
           <h4 class="heavy feature">Kenneth Ma ✌️</h4>
-          <p class="bottom medium print">I develop all sorts of useless things as a mediocre "full-stack" software engineer and pretend entrepreneur.</p>
+          <p class="bottom medium print">Sr. Engineering Manager @ Borrowell, leading the both the Platform and Mobile Engineering group</p>
           <div class="divider"></div>
         </div>
         <div id="signatureBox">
@@ -68,7 +68,7 @@
     </div>
     <div class="clear"></div>
     <div class="from end">
-      <p>who dis?</p>
+      <p>Heya! How's it going?</p>
     </div>
     <div class="clear"></div>
     <div class="you label">
@@ -76,12 +76,15 @@
     </div>
     <div class="clear"></div>
     <div class="to end">
-      <p>Hi! I'm interested in hiring you, of course.</p>
-      <p>Tell me all about the "useless things" that you've made!</p>
+      <p>Hi! I'm interested in your profile and would like to learn more about your career.</p>
+    </div>
+    <div class="clear"></div>
+    <div class="from">
+      <p>Cool!</p>
     </div>
     <div class="clear"></div>
     <div class="from end">
-      <p>um, ok</p>
+      <p>I'm currently a Sr. Engineering Manager @ <a href="https://borrowell.com">Borrowell</a> and leading the Platform Engineering and Mobile Product group</p>
     </div>
     <div class="clear"></div>
   </section>
@@ -89,14 +92,12 @@
     <div class="container">
       <div class="row">
         <div class="four columns">
-          <img src="/assets/index/frrand.jpg" class="u-max-full-width">
+          <img src="./assets/index/borrowell.png" class="u-max-full-width">
         </div>
         <div class="eight columns">
-          <p class="top mimimal heavy uppercased subtitle">I ran my own tech startup</h1>
-          <h4 class="heavy feature">Frrand, Inc.</h4>
-          <p class="medium print">Free delivery for the little things.</p>
-          <p class="medium print">Frrand was a crowd-sourced delivery platform that algorithmically matched delivery requests to people already travelling a similar path.</p>
-          <p class="bottom medium print">On launch, Frrand went viral with over 2,000 users and 600 likes on our Facebook page.</p>
+          <p class="top mimimal heavy uppercased subtitle">Platform Engineering</h1>
+          <h4 class="heavy feature">Borrowell</h4>
+          <p class="bottom medium print">We're a fintech scale-up based in Toronto, Canada that's trusted by over 2 million Canadians with the mission of making financial prosperity possible.</p>
           <div class="divider"></div>
         </div>
       </div>
@@ -109,24 +110,63 @@
     <div class="clear"></div>
     <div class="to end">
       <p>Dope!</p>
-      <p>I'm guessing you want to talk about how you got 2,000 users on the first day?</p>
+      <p>Can you tell me more about your role at Borrowell?</p>
     </div>
     <div class="clear"></div>
     <div class="me label">
       <p>Kenneth</p>
     </div>
     <div class="clear"></div>
-    <div id="pizza" class="from">
-      <div class="image"></div>
-    </div>
-    <div class="clear"></div>
     <div class="from">
-      <p>it's like you read my mind</p>
+      <p>I lead 3 seperate teams with 11 Engineers and an Engineering Manager and currently report into the VP of Engineering</p>
     </div>
     <div class="clear"></div>
     <div class="from end">
-      <p>we offered to buy our entire school pizza. seriously.</p>
-      <p>it ended up costing us only about $700.. or $0.35 each user gained</p>
+      <p>I'm primarily responsible for the establishment of our new Platform Engineering group with the mandate of ensuring that development efforts and best practices are shared across the company</p>
+      <p>I also continue to manage the Mobile Product engineering team, something that has remained with me since I joined Borrowell in 2019</p>
+    </div>
+    <div class="clear"></div>
+    <div class="you label">
+      <p>You</p>
+    </div>
+    <div class="clear"></div>
+    <div class="to end">
+      <p>Can you be more specific about some projects or accomplishments?</p>
+    </div>
+    <div class="clear"></div>
+    <div class="me label">
+      <p>Kenneth</p>
+    </div>
+    <div class="clear"></div>
+    <div class="from">
+      <p>Yeah, absolutely</p>
+    </div>
+    <div class="clear"></div>
+    <div class="from end">
+      <p>My personal stack is primarily front-end and hybrid mobile: react-native, redux, redux-observables, and rxjs</p>
+    </div>
+    <div class="clear"></div>
+    <div class="me label">
+      <p>Kenneth</p>
+    </div>
+    <div class="clear"></div>
+    <a href="https://www.theglobeandmail.com/investing/personal-finance/household-finances/article-borrowell-to-start-reporting-rent-payments-to-equifax-canada/">
+      <div id="rent-advantage" class="from">
+        <div class="image"></div>
+      </div>
+    </a>
+    <div class="clear"></div>
+    <div class="from">
+      <p>I recently led the engineering effort behind <a href="https://borrowell.com/rent-advantage">Rent Advantage</a>, a first-to-market service to help Canadians build credit history with Equifax by reporting rent payments</p>
+    </div>
+    <div class="clear"></div>
+    <div class="from end">
+      <p>Partnering with Equifax Canada, we launched Borrowell's first subscription-based service in 2022</p>
+      <p>We went from ideation and forming a new team to our members subscribing to the paid service in just 8 weeks</p>
+    </div>
+    <div class="clear"></div>
+    <div class="you label">
+      <p>You</p>
     </div>
     <div class="clear"></div>
     <div class="to end">
@@ -134,25 +174,45 @@
       <p>What else have you done?</p>
     </div>
     <div class="clear"></div>
-    <div class="from">
-      <p>lots more, but i'm not done my site yet. for now, chat with me irl</p>
+    <div class="me label">
+      <p>Kenneth</p>
     </div>
     <div class="clear"></div>
     <div class="from">
-      <p>email <a href="mailto:ken@kenma.ca">ken@kenma.ca</a></p>
+      <p>Quite a bit more, but I'm not done my site yet</p>
+      <p>Perhaps you'd like to chat IRL and learn more?</p>
+    </div>
+    <div class="clear"></div>
+    <div class="from">
+      <p>You can email me at <a href="mailto:ken@kenma.ca">ken@kenma.ca</a></p>
     </div>
     <div class="clear"></div>
     <div class="from end">
-      <p>or on <a href="http://facebook.com/mmmken">facebook</a></p>
+      <p>.. or on <a href="https://linkedin.com/in/kenmaca">LinkedIn</a></p>
+    </div>
+    <div class="clear"></div>
+    <div class="you label">
+      <p>You</p>
     </div>
     <div class="clear"></div>
     <div class="to end">
       <p>What if I don't want to chat just yet?</p>
     </div>
     <div class="clear"></div>
+    <div class="me label">
+      <p>Kenneth</p>
+    </div>
+    <div class="clear"></div>
+    <div class="from">
+      <p>Sorry 😢</p>
+    </div>
+    <div class="clear"></div>
     <div class="from end">
-      <p>sorry 😢</p>
-      <p>but here's my (less exciting) <a href="/assets/index/ken.pdf">resume</a> until then</p>
+      <p>.. but here's my (less exciting) <a href="./assets/index/ken.pdf">resume</a> until then</p>
+    </div>
+    <div class="clear"></div>
+    <div class="you label">
+      <p>You</p>
     </div>
     <div class="clear"></div>
     <div class="to end">
